umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_2918_Nc1nc(OCC2CCCO2)c2nc_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_opensmiles
category: basic_opensmiles
basic_opensmiles:
  success: true
  summary:
    sum_formula: C10N5O2
    atom_count: 17
    bond_count: 19
